<resources>
    <string name="app_name">AndroidLabs</string>
    <string name="hello_message">Hello World!</string>
    <string name="ButtonText">I\'m a button</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="login_message">Login</string>
    <string name="login_name">login name</string>
    <string name="password_message">Password</string>
    <string name="radio_button">RadioButton</string>
    <string name="check_box">CheckBox</string>
    <string name="enable">Enable Something</string>
    <string name="loginActivityButton">Login</string>
    <string name="dialog_message">Do you want to quit?</string>
    <string name="dialog_title">Warning</string>
    <string name="ok">Yes</string>
    <string name="cancel">No</string>
    <string name="chatButton">Start Chat</string>
    <string name="sendButton">Send</string>
    <string name="checkWeatherButton">Weather</string>
    <string name="deleteMessageButton">Delete this message</string>
    <string name="deleteMessageID">ID=</string>
    <string name="deleteMessageInfo">MessageHere</string>
    <string name="gotoTestToolbar">Test Toolbar</string>
    <string name="messageInput">Enter Text</string>
    <string name="title_activity_test_toolbar">TestToolbar</string>
</resources>
