<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <TextView
        android:text="@string/deleteMessageInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/messageHere"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:gravity="right"
        android:textSize="30sp" />

    <TextView
        android:text="@string/deleteMessageID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/messageHere"
        android:layout_alignStart="@+id/messageHere"
        android:layout_marginTop="25dp"
        android:id="@+id/messageID"
        android:layout_alignParentEnd="true"
        android:gravity="right"
        android:textSize="30sp" />

    <Button
        android:text="@string/deleteMessageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:id="@+id/deleteMessage" />
</RelativeLayout>